syntax = "proto3";
option java_package = "com.ccg.ancientaliens.protocol";


/**
 * Custom type messages. Should not be sent directly.
 */
enum Phase {
    NOPHASE = 0;
    MULLIGAN = 1;
    BEGIN = 2;
    MAIN = 3;
    MAIN_RESOLVING = 4;
    END = 5;
}

enum SelectFromType {
    NOTYPE = 0;
    LIST = 1;
    LISTUPTO = 2;
    HAND = 3;
    PLAY = 4;
    SCRAPYARD = 5;
    VOID = 6;
}
 
message Table
{
    string id = 1;
    string creator = 2;
    string opponent = 3;
}

enum Knowledge {
    NONE = 0;
    BLACK = 1;
    GREEN = 2;
    RED = 3;
    BLUE = 4;
    WHITE = 5;
}

message KnowledgeGroup {
    Knowledge knowledge = 1;
    int32 count = 2;
}

enum Counter {
    NOCOUNTER = 0;
}

message CounterGroup {
    Counter counter = 1;
    int32 count = 2;
}

message Card {
    string id = 1;
    string name = 2;
    repeated CounterGroup counters = 3;
    bool depleted = 4;
    bool marked = 5;
    repeated string targets = 6;
    string description = 7;
}

message Player {
    string id = 1;
    string name = 2;
    int32 deckSize = 3;
    int32 energy = 4;
    int32 maxEnergy = 5;
    repeated Card hand = 6;
    repeated Card play = 7;
    repeated Card scrapyard = 8;
    repeated Card void = 9;
    repeated KnowledgeGroup knowledgePool = 10;
}

message Opponent {
    string id = 1;
    string name = 2;
    int32 deckSize = 3;
    int32 energy = 4;
    int32 maxEnergy = 5;
    int32 handSize = 6;
    repeated Card play = 7;
    repeated Card scrapyard = 8;
    repeated Card void = 9;
    repeated KnowledgeGroup knowledgePool = 10;
}

message GameState {
    string id = 1;
    Player player = 2;
    Opponent opponent = 3;
    string turnPlayer =  4;
    string activePlayer = 5;
    repeated Card stack = 6;
    repeated string canPlay = 7;
    repeated string canActivate = 8;
    repeated string canStudy = 9;
    Phase phase = 10;
}

